<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutLayout"
    android:layout_width="match_parent"  android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivGallery"
        android:layout_width="356dp"
        android:layout_height="265dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="39dp"
        app:layout_constraintBottom_toTopOf="@+id/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <Button
        android:id="@+id/snap"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="194dp"
        android:layout_marginBottom="203dp"
        android:onClick="onTakePhoto"
        android:text="snap" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ivGallery"
        android:layout_alignEnd="@+id/snap"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="137dp"
        android:onClick="onSearchPhotos"
        android:text="search"
        tools:layout_editor_absoluteX="291dp"
        tools:layout_editor_absoluteY="635dp" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/snap"
        android:layout_marginStart="240dp"
        android:onClick="onScrollPhotos"
        android:text="next" />

    <Button
        android:id="@+id/btnPrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnNext"
        android:layout_alignEnd="@+id/btnNext"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="137dp"
        android:onClick="onScrollPhotos"
        android:text="prev"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="622dp" />

    <TextView
        android:id="@+id/tvTimestamp"
        android:layout_width="162dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="345dp"
        android:layout_marginEnd="55dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="157dp"
        android:layout_height="50dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="345dp"
        android:layout_marginEnd="55dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255" />

    <EditText
        android:id="@+id/etCaption"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="259dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:singleLine="true"
        android:imeOptions="actionDone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSearch"
        android:layout_alignStart="@+id/snap"
        android:layout_alignEnd="@+id/snap"
        android:layout_marginEnd="-110dp"
        android:layout_marginBottom="-175dp"
        android:onClick="onSharePhoto"
        android:text="Share" />
</RelativeLayout>
